separate bootstrap with app styles

--- a/stub/index.html
+++ b/stub/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Angular Todo Chrome Extension</title>
+  <link rel="stylesheet" type="text/css" href="//localhost:8080/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="//localhost:8080/styles.css">
 </head>
 <body>
