update index.html with bootstrap css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Angular Todo Chrome Extension</title>
+  <link rel="stylesheet" type="text/css" href="build/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="build/styles.css">
 </head>
 <body>
